syntax = "proto3";

option go_package = "v1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "api/v1/common.proto";

package v1;

enum ImageScanState {
    FAILED    = 0;
    UNSCANNED = 1;
    SCANNING  = 2;
    PENDING   = 3;
    SCANNED   = 4;
    CHECKING  = 5;
    COMPLETED = 6;
}

message ImageLayer {
    string instruction                 = 1;
    string value                       = 2;
    google.protobuf.Timestamp created  = 3;
    string author                      = 4;
}

message V2Metadata {
    string digest          = 1;
    repeated string layers = 2;
}

message ImageMetadata {
    google.protobuf.Timestamp created  = 1;
    string author                      = 2;
    repeated ImageLayer layers         = 3;
    repeated string fs_layers          = 4;
    V2Metadata v2                      = 5;
}

message License {
    string name = 1;
    string type = 2;
    string url  = 3;
}

message Vulnerability {
    string cve     = 1;
    float cvss     = 2;
    string summary = 3;
    string link    = 4;
}

message ImageScanComponents {
    string name                  = 1;
    string version               = 2;
    License license              = 3;
    repeated string full_path    = 4; // Unsure if needed
    repeated Vulnerability vulns = 5;
}

message ImageName {
    string sha                              = 1;
    string registry                         = 2;
    string remote                           = 3;
    string tag                              = 4;
    string full_name                        = 5;
}

message ImageScan {
    google.protobuf.Timestamp scan_time     = 1;
    repeated ImageScanComponents components = 2;
}

message Image {
    ImageName name          = 1;

    ImageMetadata metadata  = 2;
    ImageScan scan          = 3;
}

message GetImagesRequest {
}

message GetImagesResponse {
    repeated Image images = 1;
}

service ImageService {

    rpc GetImage(ResourceByID) returns (Image) {
        option (google.api.http) = {
            get: "/v1/images/{id}"
        };
    }

    rpc GetImages(GetImagesRequest) returns (GetImagesResponse) {
        option (google.api.http) = {
            get: "/v1/images"
        };
    }

}
