syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

package storage;

message LogIntegration {
    message AWSConfig {
        bool   use_iam           = 1 [(gogoproto.moretags) = "scrub:\"dependent\""];
        // The access key ID for the storage integration. Cannot use if IAM is selected. The server will mask the value of this credential in responses and logs.
        string access_key_id     = 2 [(gogoproto.moretags) = "scrub:\"always\""];
        // The secret access key for the storage integration. Cannot use if IAM is selected. The server will mask the value of this credential in responses and logs.
        string secret_access_key = 3 [(gogoproto.moretags) = "scrub:\"always\""];
    }

    message GCPConfig {
        // The service account for the storage integration. If entered, the project id in the JSON has to match the project id provided previously. Cannot use if Workload is selected. The server will mask the value of this credential in responses and logs.
        string service_account   = 1 [(gogoproto.moretags) = "scrub:\"always\""];
        bool   use_workload_id   = 2 [(gogoproto.moretags) = "scrub:\"dependent\""];
    }

    string                    id               = 1;
    string                    name             = 2;
    // Denotes the time when the log integration was created.
    google.protobuf.Timestamp created_at       = 3;
    // Denotes the frequency of log collection. If not supplied, default polling interval shall be applied.
    google.protobuf.Duration  polling_interval = 4;

    oneof Config {
        AWSConfig             eks_config       = 5;
        GCPConfig             gke_config       = 6;
    }
}
